added tests