@@ -5,12 +5,23 @@ subprojects {
         mavenCentral()
     }
 
+    test {
+        useJUnitPlatform()
+        jvmArgs += ['-XX:+EnableDynamicAgentLoading']
+    }
+
     dependencies {
         implementation 'org.tinylog:tinylog-api:2.6.2'
         implementation 'org.tinylog:tinylog-impl:2.6.2'
         implementation 'org.tinylog:slf4j-tinylog:2.6.2'
 
         implementation 'com.typesafe.akka:akka-actor_2.13:2.6.16'
-        testImplementation 'junit:junit:4.13.1'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.0-M2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.0-M2'
+        testImplementation 'org.junit.platform:junit-platform-launcher:1.13.0-M2'
+        testRuntimeOnly 'org.junit.platform:junit-platform-engine:1.13.0-M2'
+
+        testImplementation 'org.mockito:mockito-core:5.11.0'
     }
 }
